Add config class to manage api secret.